# ciphergeist

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  README.md  gap.sh  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml  test_document.txt
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
cryptopals/set1_basics/1_convert_hex_to_base64/: index.html
cryptopals/set1_basics/2_fixed_XOR/: index.html
cryptopals/set1_basics/3_single_byte_XOR_cipher/: index.html
cryptopals/set1_basics/4_detect_single_character_XOR/: index.html
docs/: index.md  modules.md  xorxer.md
docs/cryptopals/set1_basics/: 1-convert-hex-to-base64.md  1_convert_hex_to_base64.md  2-fixed-XOR.md  2_fixed_XOR.md  3-single-byte-XOR-cipher.md  3_single_byte_XOR_cipher.md  4-detect-single-character-XOR.md  4_detect_single_character_XOR.md  5-implement-repeating-key-XOR  5-implement-repeating-key-XOR.md
docs/shc/crypto/: cry-205.md  farm-life.md  hsb.md  office-encryption.md  opt_public.py  really-secure-application.md  really_secure_application.md  xoxo.md
docs/shc/crypto/hsb/: challenge.py  secret.py
docs/shc/web/: calculator.md
docs/stylesheets/: extra.css
reference/SUMMARY/: index.html
reference/ciphergeist/: index.html
reference/ciphergeist/analyzers/: index.html
reference/ciphergeist/analyzers/example_usage/: index.html
reference/ciphergeist/analyzers/text_analyzer/: index.html
reference/ciphergeist/converter/: index.html
reference/ciphergeist/decrypters/: index.html
reference/ciphergeist/decrypters/rsa_decrypter/: index.html
reference/ciphergeist/encoders/: index.html
reference/ciphergeist/encoders/pixelator/: index.html
reference/ciphergeist/encrypters/: index.html
reference/ciphergeist/encrypters/substitutor/: index.html
reference/ciphergeist/encrypters/xorxer/: index.html
reference/ciphergeist/exceptions/: index.html
reference/ciphergeist/frequencies/: index.html
search/: search_index.json
shc/crypto/: output.txt
shc/crypto/office-encryption/: index.html
shc/crypto/really_secure_application/: index.html
src/ciphergeist/: __init__.py  cli.py  exceptions.py
src/ciphergeist/analyzers/: __init__.py  example_usage.py  text_analyzer.py
src/ciphergeist/books/: dracula.txt  frankenstein.txt  sherlock_holmes.txt  war_and_peace.txt
src/ciphergeist/decrypters/: __init__.py  rsa_decrypter.py
src/ciphergeist/encoders/: pixelator.py
src/ciphergeist/encrypters/: substitutor.py  xorxer.py
src/ciphergeist/frequencies/: calculate_frequenzies.py  lowercase.py  lowercase_frequencies.json  lowercase_frequencies.py  mixed_frequencies.json  mixed_frequencies.py  uppercase_frequencies.json  uppercase_frequencies.py
src/ciphergeist/operations/: converter.py  xorxer.py
tests/: test_converter.py  test_foo.py  test_xorxer.py
(+4 files in other folders)
